canvas commit fix

--- a/Cours2Canvas/index.html
+++ b/Cours2Canvas/index.html
@@ -8,11 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
-<body onload="initialize();">
-    <canvas id='monCanvas' width="500px" height="500px" style="border: 1px black solid;">
+<body onload="exercice1();">
+    <canvas id='monCanvas' width="768px" height="420px" style="border: 1px black solid;">
     </canvas>
+
 
 <script>
 
