--- a/cours5/index.htm
+++ b/cours5/index.htm
@@ -20,8 +20,10 @@
       </ul>
 
       <p class="card__commentaire">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum consectetur unde a repellat, veritatis molestiae corrupti id accusamus vitae alias minima
-        quasi fuga quam et, ea eligendi saepe voluptas nesciunt?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis reiciendis. Asperiores ea, rerum, molestias magni aspernatur nesciunt, laborum
+        doloribus doloremque quis soluta nostrum repellat enim consectetur ad natus veritatis. Esse voluptatibus consequatur, sequi fuga qui perferendis
+        consectetur ullam sunt distinctio rem aut nulla quae harum ut ad aperiam. Est voluptate aut tempora illum odio ullam voluptas, recusandae perferendis
+        fuga.
       </p>
       <button class="card__button card__button--normal card__button--hover">Visit the link</button>
     </div>
