sass_bem 1er commit

--- a/sass2/index.html
+++ b/sass2/index.html
@@ -6,12 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link rel="stylesheet" href="style/css/style.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style/css/exercice1.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="style/css/exercice2.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style/css/exercice3.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style/css/exercice4.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style/css/exercice5.css" crossorigin="anonymous" />
   </head>
   <body>
+    <h2>Exercice1</h2>
+    <p class="par-1">Lorem ipsum dolor sit amet.</p>
+    <p class="par-2">Lorem ipsum dolor sit amet.</p>
+    <p class="par-3">Lorem ipsum dolor sit amet.</p>
+    <p class="par-4">Lorem ipsum dolor sit amet.</p>
+    <p class="par-5">Lorem ipsum dolor sit amet.</p>
+    <p class="par-6">Lorem ipsum dolor sit amet.</p>
+
+    <h2>Exercice2</h2>
     <div class="dir-nord"></div>
     <div class="dir-sud"></div>
     <div class="dir-est"></div>
     <div class="dir-west"></div>
+
+    <h2>Exercice3</h2>
+    <div class="blockwidth-un">test un</div>
+    <div class="blockwidth-cinq">test cinq</div>
+    <div class="blockwidth-dix">test dix</div>
+
+    <h2>Exercice4</h2>
+    <div class="blockwidth-un">test un</div>
+    <div class="blockwidth-cinq">test cinq</div>
+    <div class="blockwidth-dix">test dix</div>
+
+    <h2>Exercice5</h2>
+    <img src="/assets/imgs/smiley.jpg" alt="" class="image_left exercice4" width="200px" height="200px" />
+    <img src="/assets/imgs/smiley.jpg" alt="" class="image_rigth exercice4" width="200px" height="200px" />
+    <div class="blockwidth-cinq">test cinq</div>
+    <div class="blockwidth-dix">test dix</div>
   </body>
 </html>
